--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2017,7 +2017,7 @@ facility
 ============== */
 
 .facility-area{
-	background-image: url(../img/Umachi.png);
+	background-image: url(../img/umachi.png);
 	background-size: cover;
 	position: relative;
 	z-index: 1;
