--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -169,7 +169,7 @@
 		display: block;
 		width: 30px;
 		height: 2px;
-		background: #ed3237;
+		background: #ff7b00;
 		margin: 6px 0;
 		-webkit-transition: all 0.3s ease-out 0s;
 		transition: all 0.3s ease-out 0s;
@@ -528,7 +528,7 @@
 		display: block;
 		width: 30px;
 		height: 2px;
-		background: #ed3237;
+		background: #ff7b00;
 		margin: 6px 0;
 		-webkit-transition: all 0.3s ease-out 0s;
 		transition: all 0.3s ease-out 0s;
@@ -1059,7 +1059,7 @@
 		display: block;
 		width: 30px;
 		height: 2px;
-		background: #ed3237;
+		background: #ff7b00;
 		margin: 6px 0;
 		-webkit-transition: all 0.3s ease-out 0s;
 		transition: all 0.3s ease-out 0s;
