--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3651,7 +3651,7 @@ facility
 */
 
 .contact-section {
-	background-image: url(../img/contact-bg.jpg);
+	background-image: url(../img/contact.jpg);
 	background-attachment: fixed;
 	position: relative;
 	z-index: 1;
